--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,9 @@ env:
     - BYOND_MINOR="1345"
     matrix:
     - DM_MAPFILE="tgstation"
-    - DM_MAPFILE="metaclub"
-    - DM_MAPFILE="defficiency"
-    - DM_MAPFILE="taxistation"
     - DM_MAPFILE="test_box"
     - DM_MAPFILE="test_tiny"
+    - DM_MAPFILE="cynatest"
 
 cache:
   directories:
